fix: Giving height fixed setting to stop jumpy inner box

--- a/src/pages/Home/Banner/Banner.module.css
+++ b/src/pages/Home/Banner/Banner.module.css
@@ -33,6 +33,10 @@
 
 @media (min-width: 1024px) {
 
+    .banner {
+        height: 717px;
+    }
+
     .bannerDiscoverBox {
         width: 643px;
         height: 443px;
